# neo4j-agent-flow

./: .env.example  .env.exemple  .gitignore  README.md  chat_debug.html  diego_sdk_mastery.py  hooks_system_diego.py  index.html  mcp_tools_diego.py  start_frontend.sh
agent/: CLAUDE.md
agent/data/: BOOTCAMP_PROFILE.md
agents/: hello_flow_agent.py
api/: .env.example  .env.testnet  CLAUDE.md  certificado_avancado.md  check_flow_balance_mcp.py  check_flow_balance_testnet.py  deploy_and_mint.py  deploy_hackathon_badge.py  execute_flow_transaction.py  flow-balance  flow-check  flow-server.py  flow.json  gap_2_hooks_tutorial.py  lucas_montano_nft.json  mcp_progresso_diego.json  mcp_tutorial_diego.py  mint_badge_testnet.py  mint_wave_prize_nft.py  quiz_sdk.py  quiz_sdk_completo.py  real_deploy_mint.py  requirements.txt  revisao_sdk_interativa.py  server.py  server_original.py  simple_tx.cdc  test_flow_connection.py  test_mint_badge.py
api/bridge/: claude_sdk_bridge.py
api/ccsdk/: ai-client.ts  custom-tools.ts
api/contracts/: SimpleSurfistaNFT.cdc  SurferNFT.cdc  SurfistaLeaderboard.cdc  SurfistaNFT.cdc  TesouroProtegido.cdc  WaveNFT.cdc  WaveNFT_Simple.cdc  WaveNFT_Standalone.cdc  WaveNameService.cdc
api/core/: claude_handler.py  session_manager.py
api/credentials/: TESTNET_SUCCESS_GUIDE.md  WORKING_CREDENTIALS.md  final_test_with_sequence.py  test_working_account.py
api/database/: neo4j-mcp-adapter.ts  neo4j-mcp-real.ts  seed-knowledge.ts
api/docs/: 00_INDEX_MASTER.md  00_SUPER_BASICO.md  01_OVERVIEW.md  02_QUICK_START.md  10_BASIC_CONCEPTS.md  FLOW_LEARNING_PATH.md  FLOW_NATIVE_AGENTS.md  NOSSA_API_TUTORIAL.md  README.md  bootcamp-ai-agents-flow.md  flow-mcp-protocol.md  guia-agentkit-flow.md  guia-desenvolvimento-plugins-eliza.md  guia-rapido-eliza-flow.md  timeline-aprendizado-flow-mcp.md  usar-flow-mcp-cursor.md
api/find/: BOOTCAMP_TREASURE_HUNT.md  CREATE_NEW_ACCOUNT.md  FIND_CADENCE1_ANALYSIS.md  NEO4J_INTEGRATION.md  README.md  STATUS_COMPLETO.md  __init__.py  check_find_cost.cdc  check_new_account.py  config.py  diagnose_keys.py  explore_find_public.cdc  find_registration_service.py  fns_integration.py  generate_new_account.py  mnemonic_to_keys.py  neo4j_integration.py  new_keys.json  quiz.py  recover_from_mnemonic.py  register_find_cadence1.cdc  register_name_testnet.py  registro_sucesso.txt  save_learning_to_neo4j.py  setup_and_register.cdc  submarine_energy_system.py  surfer_identity_system.py  test_find_methods.py  test_ftregistry.cdc  test_lease_market.cdc  test_register_stable.cdc  test_register_surfistinha.py  test_second_account.py  test_simple_tx.py  test_with_key_index.py  treasure_hunt_game.py  verify_key_pair.py
api/flow-actions/: .env.example  .gitignore  ANALISE_E_ADAPTACAO.md  CLAUDE.md  CREATE_TESTNET_ACCOUNT.md  DEMO.md  FRONTEND_GUIDE.md  LAYERZERO_DEPLOYMENT_GUIDE.md  MIGRACAO_CLAUDE.md  Makefile  README.md  STORAGE_FIX_GUIDE.md  TESTNET_DEPLOYMENT_STATUS.md  TESTNET_GUIDE.md  USAGE_BASED_BILLING_GUIDE.md  USER_CONNECTION_GUIDE.md  VAULT_424965_VERIFICATION.md  check_mainnet_contract.cdc  create_mainnet_subscription.cdc  flow.json  get_vault_details_mainnet.cdc  query_mainnet_subscriptions.cdc  query_real_vault.cdc  query_simple_vault.cdc  real_usage_update.cdc  shutdown.ps1  test_capability_access.cdc  test_interface_syntax.cdc
api/flow-defi-mcp/: README.md  package.json  tsconfig.json
api/flow-mcp/: README.md  flow.json  package.json  tsconfig.json
api/sdk/: claude-code-tutorial.md  lucas_pratica_claude_code.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements-test_pt-br.txt
api/sdk/claude_code_sdk/: __init__.py  __init___pt-br.py  __init___pt-br_pt-br.py  _errors.py  _errors_pt-br.py  _errors_pt-br_pt-br.py  cache.py  cache_pt-br.py  client.py  client_pt-br.py  client_pt-br_pt-br.py  connection_pool.py  connection_pool_pt-br.py  extended_client.py  extended_client_pt-br.py  extended_client_pt-br_pt-br.py  logging.py  query.py  query_pt-br.py  query_pt-br_pt-br.py  rate_limiter.py  rate_limiter_pt-br.py  types.py  types_pt-br.py  utils.py
api/sdk/claude_code_sdk/_internal/: client.py  client_pt-br.py  message_parser.py  message_parser_pt-br.py  query.py  query_pt-br.py
api/sdk/claude_code_sdk/_internal/transport/: __init__.py  __init___pt-br.py  __init___pt-br_pt-br.py  subprocess_cli.py  subprocess_cli_pt-br.py
api/sdk/mcp/: __init__.py  server.py  types.py
api/sdk/tests/: README.md  __init__.py  conftest.py  test_client.py  test_client_pt-br.py  test_errors.py  test_errors_pt-br.py  test_errors_pt-br_pt-br.py  test_query.py  test_query_pt-br.py
bridge/: claude_sdk_bridge.py
ccsdk/: custom-tools.ts  session.ts  types.ts
chat/: App.tsx  chat_debug.html  index.html  package-lock.json  package.json  react-app.html  serve.js  serve_frontend.py  simple_server.py  tsconfig.json
chat/src/: index.ts  (+1 more)
client/: App.css  App.tsx  globals.css  index.css  index.html
contracts/: AgentRegistry.cdc
database/: neo4j-mcp-adapter.ts  seed-data.json
docs/: arquitetura-mermaid.md  tutorial_inicio_rapido.md
mcp-proxy/: claude_proxy_mcp.py
(+290 files in other folders)
